--- a/public/views/pages/goods/edit.html
+++ b/public/views/pages/goods/edit.html
@@ -156,7 +156,7 @@ div.tagsinput span.tag {
                         </div>
                         <div class="form-group">
                                 <label class="col-md-2 col-sm-2 control-label">供应商信息</label>
-                                <div class="col-md-6">
+                                <div class="col-md-6" id="storeSelector">
                                     <input type="text" class="form-control" placeholder="供应商信息"disabled>
                                     <!-- <select class="form-control m-bot15" tt-model="good.supplier_id">
                                         <option>长沙市湘华香烟批发商行</option>
