增加商品编辑功能

--- a/public/views/pages/goods/detail.html
+++ b/public/views/pages/goods/detail.html
@@ -47,7 +47,7 @@
                                 </li>
                                 <li>
                                     <div class="title">单位</div>
-                                    <div class="desk" tt-bind="good.description"></div>
+                                    <div class="desk" tt-bind="good.unit"></div>
                                 </li>
                                 <li>
                                     <div class="title">库存</div>
