--- a/public/views/pages/goods/list.html
+++ b/public/views/pages/goods/list.html
@@ -75,7 +75,7 @@
                                 <td>
                                     <a href="/goods/{{item.id}}"><i class="fa fa-eye"></i></a>
                                     <a href="/goods/{{item.id}}/edit"><i class="fa fa-edit"></i></a>
-                                    <a href="javascript:;" tt-click="deleteModule"><i class="fa fa-trash-o"></i></a>
+                                    <a href="javascript:;" tt-click="deleteGoodDialog"><i class="fa fa-trash-o"></i></a>
                                 </td>
                             </tr>  
                         {% endraw %}
