增加商品类目管理

--- a/public/views/components/sideNav/index.html
+++ b/public/views/components/sideNav/index.html
@@ -36,7 +36,7 @@
                 <ul class="sub-menu-list">
                     <li data-submenu="list"><a href="/goods"> 商品列表</a></li>
                     <li data-submenu="new"><a href="/goods/new"> 新增商品</a></li>
-                    <li data-submenu="cat"><a href="/category"> 商品类目</a></li>
+                    <li data-submenu="cat"><a href="/cats"> 商品类目</a></li>
                 </ul>
             </li>
             <li class="menu-list" data-menu="supplier"><a href=""><i class="fa fa-tasks"></i> <span>供应商管理</span></a>
