--- a/public/views/pages/goods/category.html
+++ b/public/views/pages/goods/category.html
@@ -35,7 +35,7 @@
                 <div class="panel-body">
                     <div class="clearfix">
                         <div class="btn-group">
-                            <button id="editable-sample_new" class="btn btn-primary">
+                            <button id="editable-sample_new" class="btn btn-primary" tt-click="editCat">
                             新增类目 <i class="fa fa-plus"></i>
                             </button>
                         </div>
